# smartdesk-ai

./: Makefile  README.md  main.py  pyproject.toml
apps/accounts/: admin.py  dashboard.py  managers.py  models.py  schemas.py  serializers.py  services.py  tests.py  urls.py  utils.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_companyprofile_chat_fields.py  0003_companyprofile_chat_color_companyprofile_chat_icon_and_more.py
apps/accounts/test/: test.sh  test.txt
apps/analytics/: schemas.py  serializers.py  services.py  urls.py  utils.py  views.py
apps/analytics/test/: test.sh
apps/billing/: admin.py  apps.py  models.py  services.py  signals.py  tasks.py  urls.py  views.py
apps/billing/migrations/: 0001_initial.py
apps/billing/test/: test.sh
apps/chat/: admin.py  consumers.py  middleware.py  models.py  routing.py  serializers.py  services.py  urls.py  views.py
apps/chat/migrations/: 0001_initial.py  0002_chatsession_operator_chatsession_status_and_more.py  0003_chatmessage_embedding.py
apps/chat/test/: test.sh
apps/knowledge/: admin.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/knowledge/migrations/: 0001_initial.py
apps/knowledge/test/: test.txt
apps/notifications/: admin.py  models.py  schemas.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/notifications/migrations/: 0001_initial.py
apps/notifications/test/: test.sh
apps/templates/: home.html
apps/templates/admin/: index.html
config/: __init__.py  asgi.py  celery_app.py  urls.py
config/settings/: development.py  local.py  production.py
config/settings/base/: __init__.py  admin.py  apps.py  authentication.py  celery.py  drf.py  email.py  general.py  knowledge.py  logging.py  passwords.py  redis.py  spectacular.py  stripe.py  unfold.py  urls.py
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml
tests/performance/: locustfile.py
