[project]
name = "smartdesk-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "argon2-cffi>=25.1.0",
    "celery>=5.6.3",
    "channels>=4.3.2",
    "channels-redis>=4.3.0",
    "daphne>=4.2.1",
    "dj-stripe>=2.10.3",
    "django==5.2",
    "django-debug-toolbar>=6.3.0",
    "django-environ>=0.13.0",
    "django-extensions>=4.1",
    "django-redis>=6.0.0",
    "django-unfold==0.92.0",
    "djangorestframework==3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular==0.29.0",
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.1",
    "openai>=2.37.0",
    "pgvector>=0.4.2",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "pypdf>=6.11.0",
    "python-docx>=1.2.0",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "locust>=2.37.0",
    "ruff>=0.9.0",
    "websocket-client>=1.8.0",
]

[tool.ruff]
line-length = 119
target-version = "py314"
exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"config/settings/*.py" = ["F405", "F403"]
"apps/chat/services.py" = ["F821"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "config"]
